Update client