@@ -238,7 +238,7 @@ public class AnalyticalFieldValueDto {
   public static void validateJsonElement(JsonElement jsonElement) throws IOException {
       if (jsonElement == null) {
         if (!AnalyticalFieldValueDto.openapiRequiredFields.isEmpty()) { // has required fields but JSON element is null
-          throw new IllegalArgumentException("The required field(s) %s in AnalyticalFieldValueDto is not found in the empty JSON string".formatted(AnalyticalFieldValueDto.openapiRequiredFields.toString()));
+          throw new IllegalArgumentException(String.format("The required field(s) %s in AnalyticalFieldValueDto is not found in the empty JSON string", AnalyticalFieldValueDto.openapiRequiredFields.toString()));
         }
       }
 
@@ -246,26 +246,26 @@ public class AnalyticalFieldValueDto {
       // check to see if the JSON string contains additional fields
       for (Map.Entry<String, JsonElement> entry : entries) {
         if (!AnalyticalFieldValueDto.openapiFields.contains(entry.getKey())) {
-          throw new IllegalArgumentException("The field `%s` in the JSON string is not defined in the `AnalyticalFieldValueDto` properties. JSON: %s".formatted(entry.getKey(), jsonElement.toString()));
+          throw new IllegalArgumentException(String.format("The field `%s` in the JSON string is not defined in the `AnalyticalFieldValueDto` properties. JSON: %s", entry.getKey(), jsonElement.toString()));
         }
       }
 
       // check to make sure all required properties/fields are present in the JSON string
       for (String requiredField : AnalyticalFieldValueDto.openapiRequiredFields) {
         if (jsonElement.getAsJsonObject().get(requiredField) == null) {
-          throw new IllegalArgumentException("The required field `%s` is not found in the JSON string: %s".formatted(requiredField, jsonElement.toString()));
+          throw new IllegalArgumentException(String.format("The required field `%s` is not found in the JSON string: %s", requiredField, jsonElement.toString()));
         }
       }
         JsonObject jsonObj = jsonElement.getAsJsonObject();
       if (!jsonObj.get("analytical_field_id").isJsonPrimitive()) {
-        throw new IllegalArgumentException("Expected the field `analytical_field_id` to be a primitive type in the JSON string but got `%s`".formatted(jsonObj.get("analytical_field_id").toString()));
+        throw new IllegalArgumentException(String.format("Expected the field `analytical_field_id` to be a primitive type in the JSON string but got `%s`", jsonObj.get("analytical_field_id").toString()));
       }
       if (!jsonObj.get("value").isJsonPrimitive()) {
-        throw new IllegalArgumentException("Expected the field `value` to be a primitive type in the JSON string but got `%s`".formatted(jsonObj.get("value").toString()));
+        throw new IllegalArgumentException(String.format("Expected the field `value` to be a primitive type in the JSON string but got `%s`", jsonObj.get("value").toString()));
       }
       // ensure the optional json data is an array if present
       if (jsonObj.get("value_array") != null && !jsonObj.get("value_array").isJsonNull() && !jsonObj.get("value_array").isJsonArray()) {
-        throw new IllegalArgumentException("Expected the field `value_array` to be an array in the JSON string but got `%s`".formatted(jsonObj.get("value_array").toString()));
+        throw new IllegalArgumentException(String.format("Expected the field `value_array` to be an array in the JSON string but got `%s`", jsonObj.get("value_array").toString()));
       }
   }
 
