@@ -201,7 +201,7 @@ public class CustomerPortalRoleDto {
   public static void validateJsonElement(JsonElement jsonElement) throws IOException {
       if (jsonElement == null) {
         if (!CustomerPortalRoleDto.openapiRequiredFields.isEmpty()) { // has required fields but JSON element is null
-          throw new IllegalArgumentException("The required field(s) %s in CustomerPortalRoleDto is not found in the empty JSON string".formatted(CustomerPortalRoleDto.openapiRequiredFields.toString()));
+          throw new IllegalArgumentException(String.format("The required field(s) %s in CustomerPortalRoleDto is not found in the empty JSON string", CustomerPortalRoleDto.openapiRequiredFields.toString()));
         }
       }
 
@@ -209,18 +209,18 @@ public class CustomerPortalRoleDto {
       // check to see if the JSON string contains additional fields
       for (Map.Entry<String, JsonElement> entry : entries) {
         if (!CustomerPortalRoleDto.openapiFields.contains(entry.getKey())) {
-          throw new IllegalArgumentException("The field `%s` in the JSON string is not defined in the `CustomerPortalRoleDto` properties. JSON: %s".formatted(entry.getKey(), jsonElement.toString()));
+          throw new IllegalArgumentException(String.format("The field `%s` in the JSON string is not defined in the `CustomerPortalRoleDto` properties. JSON: %s", entry.getKey(), jsonElement.toString()));
         }
       }
         JsonObject jsonObj = jsonElement.getAsJsonObject();
       if ((jsonObj.get("customerId") != null && !jsonObj.get("customerId").isJsonNull()) && !jsonObj.get("customerId").isJsonPrimitive()) {
-        throw new IllegalArgumentException("Expected the field `customerId` to be a primitive type in the JSON string but got `%s`".formatted(jsonObj.get("customerId").toString()));
+        throw new IllegalArgumentException(String.format("Expected the field `customerId` to be a primitive type in the JSON string but got `%s`", jsonObj.get("customerId").toString()));
       }
       if ((jsonObj.get("customerName") != null && !jsonObj.get("customerName").isJsonNull()) && !jsonObj.get("customerName").isJsonPrimitive()) {
-        throw new IllegalArgumentException("Expected the field `customerName` to be a primitive type in the JSON string but got `%s`".formatted(jsonObj.get("customerName").toString()));
+        throw new IllegalArgumentException(String.format("Expected the field `customerName` to be a primitive type in the JSON string but got `%s`", jsonObj.get("customerName").toString()));
       }
       if ((jsonObj.get("customerPortalRoleId") != null && !jsonObj.get("customerPortalRoleId").isJsonNull()) && !jsonObj.get("customerPortalRoleId").isJsonPrimitive()) {
-        throw new IllegalArgumentException("Expected the field `customerPortalRoleId` to be a primitive type in the JSON string but got `%s`".formatted(jsonObj.get("customerPortalRoleId").toString()));
+        throw new IllegalArgumentException(String.format("Expected the field `customerPortalRoleId` to be a primitive type in the JSON string but got `%s`", jsonObj.get("customerPortalRoleId").toString()));
       }
   }
 
